SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approval_Step__c/CPQ_Quote_Approval_Step__c.object-meta.xml
<CustomObject>
    <description>Quote level approval step for CPQ Playbook Approvals. Matches up to CPQ Playbook Approval Groups</description>
    <label>CPQ Quote Approval Step</label>
    <nameField>
        <label>CPQ Quote Approval Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Quote Approval Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>