SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approval_Step__c/fields/Approval_Order__c.field-meta.xml
<CustomField>
    <fullName>Approval_Order__c</fullName>
    <formula>CPQ_Playbook_Approver_Group__r.Approval_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>