SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approval_Step__c/fields/Approvers_Approved__c.field-meta.xml
<CustomField>
    <fullName>Approvers_Approved__c</fullName>
    <description>Number of approvers that have approved the step</description>
    <label># Approvers Approved</label>
    <summaryFilterItems>
        <field>CPQ_Quote_Approver__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>CPQ_Quote_Approver__c.CPQ_Quote_Approval_Step__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>