SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approval_Step__c/fields/Approvers_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Approvers_Rejected__c</fullName>
    <description>Number of approvers that have rejected the step</description>
    <label># Approvers Rejected</label>
    <summaryFilterItems>
        <field>CPQ_Quote_Approver__c.Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>CPQ_Quote_Approver__c.CPQ_Quote_Approval_Step__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>