SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approval_Step__c/fields/CPQ_Playbook_Approver_Group__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook_Approver_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Group that dictates how this step is approved</description>
    <label>CPQ Playbook Approver Group</label>
    <referenceTo>CPQ_Playbook_Approver_Group__c</referenceTo>
    <relationshipLabel>CPQ Quote Approval Steps</relationshipLabel>
    <relationshipName>CPQ_Quote_Approval_Steps</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>