SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approval_Step__c/fields/CPQ_Quote_Approval__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Quote_Approval__c</fullName>
    <description>Approval for which record is a step</description>
    <label>CPQ Quote Approval</label>
    <referenceTo>CPQ_Quote_Approval__c</referenceTo>
    <relationshipLabel>CPQ Quote Approval Steps</relationshipLabel>
    <relationshipName>CPQ_Quote_Approval_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>