SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approval_Step__c/fields/Total_Approvers__c.field-meta.xml
<CustomField>
    <fullName>Total_Approvers__c</fullName>
    <description>Total number of approvers in step</description>
    <label>Total Approvers</label>
    <summaryForeignKey>CPQ_Quote_Approver__c.CPQ_Quote_Approval_Step__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>